--- a/css/index.css
+++ b/css/index.css
@@ -37,7 +37,9 @@ body {
 
 nav {
     display: flex;
+    /* flex-wrap: wrap; */
     width: 100%;
+    max-width: 100%;
     margin-bottom: 20px;
     /* border: 1px solid turquoise; */
 }
@@ -90,6 +92,7 @@ section {
     border: none;
     font-size: inherit;
     border-bottom: 2px solid black;
+    border-radius: 0px;
     /* width: 20%; */
 }
 
